@startuml

title __AZIENDA's Class Diagram__\n

  namespace com.woonders.lacemsjsf.view.azienda {
    class com.woonders.lacemsjsf.view.azienda.AziendaConverter {
        + AziendaConverter()
        + getAsObject()
        + getAsString()
    }
  }
  

  namespace com.woonders.lacemsjsf.view.azienda {
    class com.woonders.lacemsjsf.view.azienda.AziendaView {
        {static} - log : Logger
        + getAziendaSelectionView()
        + getAziendaService()
        + getAziendaViewModel()
        + getHttpSessionUtil()
        + getPropertiesUtil()
        + init()
        + isSalvaDatiAziendaRendered()
        + refreshAziendaFromDb()
        + saveAzienda()
        + setAziendaSelectionView()
        + setAziendaService()
        + setAziendaViewModel()
        + setHttpSessionUtil()
        + setPropertiesUtil()
    }
  }
  

  com.woonders.lacemsjsf.view.azienda.AziendaConverter -up-|> com.woonders.lacemsjsf.util.BaseConverter
  com.woonders.lacemsjsf.view.azienda.AziendaConverter o-- com.woonders.lacemscommon.service.AziendaService : aziendaService
  com.woonders.lacemsjsf.view.azienda.AziendaView .up.|> java.io.Serializable
  com.woonders.lacemsjsf.view.azienda.AziendaView o-- com.woonders.lacemsjsf.view.aziendaselection.AziendaSelectionView : aziendaSelectionView
  com.woonders.lacemsjsf.view.azienda.AziendaView o-- com.woonders.lacemscommon.service.AziendaService : aziendaService
  com.woonders.lacemsjsf.view.azienda.AziendaView o-- com.woonders.lacemscommon.app.viewmodel.AziendaViewModel : aziendaViewModel
  com.woonders.lacemsjsf.view.azienda.AziendaView o-- com.woonders.lacemsjsf.util.HttpSessionUtil : httpSessionUtil
  com.woonders.lacemsjsf.view.azienda.AziendaView o-- com.woonders.lacemsjsf.config.PropertiesUtil : propertiesUtil


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
